--- a/uni-frontend/src/components/Navbar/Navbar.css
+++ b/uni-frontend/src/components/Navbar/Navbar.css
@@ -10,6 +10,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     z-index: 10;
+    transition: 0.5s;
 }
 
 .logo {
@@ -21,4 +22,9 @@ nav ul li {
     list-style: none;
     margin: 5px 20px;
     font-size: 16px;
+}
+
+.dark-nav {
+    background-color: #212ea0;
+    transition: 0.5s;
 }
