--- a/uni-frontend/src/components/Navbar/Navbar.css
+++ b/uni-frontend/src/components/Navbar/Navbar.css
@@ -28,3 +28,57 @@ nav ul li {
     background-color: #212ea0;
     transition: 0.5s;
 }
+
+.menu-icon {
+    display: none;
+}
+
+/* ------ media query ------ */
+
+@media (max-width: 1000px) {
+
+    .logo {
+        width: 140px;
+        transition: 0.5s;
+    }
+
+    nav ul li {
+        margin: 10px 15px;
+        transition: 0.5s;
+    }
+}
+
+@media (max-width:856px) {
+
+
+    nav {
+        padding: 15px 0;
+    }
+
+    nav ul {
+        position: fixed;
+        top: 0;
+        right: 0px;
+        bottom: 0;
+        background: #212EA0;
+        z-index: -1;
+        width: 200px;
+        padding-top: 70px;
+        transition: 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 25px 40px;
+    }
+
+    .menu-icon {
+        display: block;
+        width: 30px;
+        cursor: pointer;
+    }
+
+    .hide-mobile-menu {
+        right: -200px;
+    }
+}
