--- a/uni-frontend/src/components/About/About.css
+++ b/uni-frontend/src/components/About/About.css
@@ -46,3 +46,21 @@
     color: #676767;
     margin-bottom: 15px;
 }
+
+/* media queries */
+
+@media (max-width:800px) {
+    .about {
+        flex-direction: column;
+    }
+
+    .about-left {
+        flex-basis: 100px;
+        margin: 20px;
+        order: 2;
+    }
+
+    .about-right {
+        flex-basis: 100%;
+    }
+}
