--- a/uni-frontend/src/components/Contact/Contact.css
+++ b/uni-frontend/src/components/Contact/Contact.css
@@ -56,3 +56,16 @@
     display: block;
     margin: 20px 0;
 }
+
+/* media querries */
+
+@media (max-width:700px) {
+    .contact {
+        display: block;
+    }
+
+    .contact-col {
+        padding: 20px;
+    }
+
+}
