--- a/uni-frontend/src/components/Hero/Hero.css
+++ b/uni-frontend/src/components/Hero/Hero.css
@@ -25,3 +25,22 @@
     max-width: 700px;
     margin: 10px auto 20px;
 }
+
+@media (max-width:856px) {
+    .hero-text h1 {
+        font-size: 40px;
+    }
+}
+
+@media (max-width:650px) {
+    .hero-text h1 {
+        font-size: 30px;
+        max-width: 400px;
+        margin: auto;
+    }
+
+    .hero-text p {
+        font-size: 14px;
+        margin: 15px auto 30px;
+    }
+}
