--- a/uni-frontend/src/components/Navbar/Navbar.css
+++ b/uni-frontend/src/components/Navbar/Navbar.css
@@ -53,8 +53,7 @@ nav ul li {
 
 
     nav {
-        padding: 15px 0;
-        margin-top: 10px;
+        padding: 20px 10px;
     }
 
     nav ul {
