index container padding-top

--- a/uni-frontend/src/index.css
+++ b/uni-frontend/src/index.css
@@ -63,3 +63,10 @@ a {
         padding: 14px 22px;
     }
 }
+
+@media (max-width: 856px) {
+    .container {
+        padding-top: 10px;
+    }
+
+}
